--- a/package.json
+++ b/package.json
@@ -13,27 +13,32 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "^4.16.2",
     "@supabase/supabase-js": "^2.87.1",
+    "axios": "^1.13.2",
     "emailjs-com": "^3.2.0",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "gsap": "^3.14.1",
     "lucide-react": "^0.556.0",
     "next": "^16.0.8",
     "openai": "^6.10.0",
+    "prisma": "^4.16.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.26",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "postcss": "^8.5.6",
-    "prisma": "^7.1.0",
     "tailwindcss": "^3.4.18",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
